-made menu -add animations

--- a/index.html
+++ b/index.html
@@ -7,23 +7,28 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <script src="https://use.typekit.net/rcz2ppw.js"></script>
-    <script>try{Typekit.load({ async: true });}catch(e){}</script>
+    <script>try {
+        Typekit.load({async: true});
+    } catch (e) {
+    }</script>
     <style>
-        html{
-            font-size:62.5%;
+        html {
+            font-size: 62.5%;
             overflow: hidden;
             font-family: "proxima-nova", sans-serif;
             backface-visibility: hidden !important;
             transform: translateZ(0) !important;
             -webkit-font-smoothing: antialiased !important;
         }
-        body{
+
+        body {
             background-color: #1c1d21;
             color: #eeeff7;
             height: 100vh;
         }
-        #App{
-            height:100vh;
+
+        #App {
+            height: 100vh;
         }
     </style>
 </head>
